<resources>
    <!--Login Strings-->
    <string name="app_name">MafiaPlayer</string>
    <string name="choose_roles">Please select how many of each role you\'d like. \nPress the name of a role to see what it does.
        \nRoles with a checkmark can only have one of them per game.</string>
    <string name="default_number">0</string>
    <string name="ready">Ready to Go!</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_username">Enter a username</string>
    <string name="enter_host">Enter the host IP address</string>
    <string name="setup_player">I am the setup player</string>
    <string name="please_wait">Please wait for setup to complete.</string>
    <string name="leave_game">Leave Game</string>
    <string name="restart">Restart Game</string>

    <!--Role Descriptions-->
    <string name="hit_men">Hit Men</string>
    <string name="hit_men_desc">The hit men are part of the mafia. They choose a person to kill every
        night. The victim will be selected randomly from those the hit men choose.</string>
    <string name="hit_men_goal">You are a hit man! Your goal is to pick off civilians until there are
        fewer civilians than mafiosi.</string>
    <string name="detectives">Detectives</string>
    <string name="detectives_desc">The detectives choose a person to learn about (have their alignment,
        mafia or civilian, revealed) every night. If there is more than one, they work separately, not
        knowing who the other detectives are.</string>
    <string name="detectives_goal">You are a detective! Your goal is to figure out who the mafiosi are
        and convince everyone else to lynch them.</string>
    <string name="double_agent">Double Agent</string>
    <string name="double_agent_desc">The double agent can kill one person and save one person per game.</string>
    <string name="double_agent_goal">You are the double agent! Your goal is to use your abilities to
        defeat the mafia.</string>
    <string name="bodyguard">Bodyguard</string>
    <string name="bodyguard_desc">The bodyguard chooses a person to protect from the mafia every night.</string>
    <string name="bodyguard_goal">You are the bodyguard! Your goal is to protect as many people as possible
        from the mafia.</string>
    <string name="bomber">Bomber</string>
    <string name="bomber_desc">The bomber selects a target at the beginning of the round. If the bomber
        dies during the round, the target will die too.</string>
    <string name="bomber_goal">You are the bomber! Your goal is to try and take down a mafioso with
        you if the mafia kills you.</string>
    <string name="civilians">Civilians</string>
    <string name="civilian_desc">Civilians don\'t do anything at night.</string>
    <string name="civilian_goal">You are a civilian! Your goal is to vote for the mafiosi during the day
        so they get lynched.</string>
    <string name="matchmaker">Matchmaker</string>
    <string name="matchmaker_desc">At the beginning of the game, the matchmaker chooses two people to
        be in love. If one of them dies, the other will also.</string>
    <string name="matchmaker_goal">You are the matchmaker! You don\'t really have a goal- you just
        make two people fall in love.</string>
    <string name="official">Official</string>
    <string name="official_desc">The official chooses a person at night. That person\'s vote will count
        double the next day.</string>
    <string name="official_goal">You are the official! Your goal is to give two votes to people who
        will vote for mafiosi during the day.</string>
    <string name="suspects">Suspects</string>
    <string name="suspects_desc">The suspects are normal civilians; however, when investigated by a
        detective, they appear to be mafia.</string>
    <string name="journalist">Journalist</string>
    <string name="journalist_desc">The journalist is a normal civilian; however, if killed, roles will
        no longer be announced when other players are killed.</string>
    <string name="lawyer">Lawyer</string>
    <string name="lawyer_desc">The lawyer chooses a person every night to protect from lynching the
        following day.</string>
    <string name="lawyer_goal">You are the lawyer! Your goal is to defend innocent civilians from being
        lynched.</string>
    <string name="gossip">Town Gossip</string>
    <string name="gossip_desc">The town gossip is a normal civilian; however, if a detective visits
        him/her, that detective will not be able to investigate anyone else that game. The town gossip
        will not be informed of his/her role.</string>
    <string name="blackmailer">Blackmailer</string>
    <string name="blackmailer_desc">The blackmailer is part of the mafia. He/she chooses a person every
        night who will not be able to vote the next day.</string>
    <string name="blackmailer_goal">You are the blackmailer! Your goal is to figure out who might vote
        for the mafia and keep them from voting.</string>
    <string name="godfather">Godfather</string>
    <string name="godfather_desc">The godfather is a regular hit man, except he/she will appear to be
        innocent if investigated by a detective.</string>
    <string name="poisoner">Poisoner</string>
    <string name="poisoner_desc">The poisoner is part of the mafia. He/she chooses a person to kill
        every night; that person will die unless visited by someone else that night.</string>
    <string name="poisoner_goal">You are the poisoner! Your goal is to poison civilians until there
        are fewer civilians than mafiosi.</string>
    <string name="diplomat">Diplomat</string>
    <string name="diplomat_desc">The diplomat is a regular civilian, except he/she cannot be lynched.</string>
    <string name="diplomat_goal">You are the diplomat! Your goal is to vote for the mafiosi during the
        day so they get lynched.</string>
    <string name="hermit">Hermit</string>
    <string name="hermit_desc">The hermit is a regular civilian, except he/she cannot be killed by the
        hit men.</string>
    <string name="hermit_goal">You are the hermit! Your goal is to vote for the mafiosi during the day
        so they get lynched.</string>

    <!--Game Strings-->
    <string name="choose_lynch">Please select the player you\'d like to lynch.</string>
    <string name="mafia_killed">%1$s, the %2$s, was killed by the mafia!\n</string>
    <string name="hermit_targeted">%1$s, the hermit, was targeted by the mafia, but hid from them successfully!</string>
    <string name="bodyguard_saved">%1$s was saved by the bodyguard!\n</string>
    <string name="da_killed">%1$s, the %2$s, was killed by a mysterious stranger!\n</string>
    <string name="da_saved">%1$s was saved by a mysterious stranger!\n</string>
    <string name="bomber_killed">BOOM! %1$s, the %2$s, was killed by the bomber!\n</string>
    <string name="lover_died">Their lover, %1$s, the %2$s, died of a broken heart!\n</string>
    <string name="poisoner_killed">%1$s, the %2$s, was poisoned last night!\n</string>
    <string name="silenced">%1$s was blackmailed last night and refuses to vote!</string>
    <string name="lynched">%1$s, the %2$s, was nominated to be lynched!\n</string>
    <string name="lawyer_defended">%1$s was nominated to be lynched, but was successfully defended in
        court by the lawyer!</string>
    <string name="diplomat_lynched">%1$s, the diplomat, was nominated to be lynched, but claimed diplomatic
        immunity!</string>
    <string name="tied">No one could agree on who to lynch, so no one got lynched today.</string>
    <string name="voted">%1$s voted for %2$s.\n</string>
    <string name="civilian_win">The civilians cleared all the mafiosi from the town!</string>
    <string name="mafia_win">The mafia took over the town!</string>
    <string name="close_app">If you\'d like to play another round, please restart the app.\nThe narrator
        app on your computer will also need to be restarted.</string>
    <string name="choose_other">You\'re only allowed to select yourself once. Please choose someone else.</string>
    <string name="kill_other">You can\'t select yourself. Please choose someone else.</string>
    <string name="kill_other_mafia">You can\'t select yourself or your teammates. Please choose someone else.</string>
    <string name="kill">Kill</string>
    <string name="pass">Pass</string>

    <!--Night Strings-->
    <string name="mafia_kill">Please select a person to kill.</string>
    <string name="mafia_team">These are your fellow mafiosi.\n</string>
    <string name="investigate">Please select a person to investigate.</string>
    <string name="guard">Please select a person to guard for the night.</string>
    <string name="da_kill">If you\'d like to kill tonight, select a person. \nIf you do not select anyone,
        it will be assumed that you want to save your one bullet.</string>
    <string name="da_wait">Please wait while the mafia decide who they\'re going to kill.</string>
    <string name="da_save">%1$s is going to die tonight. Would you like to save them?</string>
    <string name="da_already_killed">You\'ve already used your one bullet.</string>
    <string name="da_already_saved">You\'ve already saved someone.</string>
    <string name="bomb">Please select a person who will also die if you die this round.</string>
    <string name="defend">Please select a person to defend against being lynched during the next day.</string>
    <string name="enfranchise">Please select a person whose vote will count double during the next day.</string>
    <string name="matchmaker_one">Please select the first lover.</string>
    <string name="matchmaker_two">Please select the second lover.</string>
    <string name="blackmail">Please select a person to prevent from voting during the next day.</string>
    <string name="poisoner_kill">Please select a person to poison. He/she will die unless someone else
        visits them tonight.</string>
    <string name="sleep">You slumber peacefully, waiting for the business of the town to be finished for the night.</string>
</resources>
