<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/middleGuide"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/rolesGuide"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_roles"
        android:id="@+id/startText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:padding="6dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/startText"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rolesListLeft"
        app:layout_constraintTop_toBottomOf="@id/rolesGuide">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/mafiosi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/default_number" />
            <TextView
                android:id="@+id/mafiosiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mafiosi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/detectives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/default_number"/>
            <TextView
                android:id="@+id/detectiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detectives" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/doubleAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/doubleAgentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_agent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/bodyguards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/bodyguardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bodyguard" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/bomber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/bomberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bomber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/lawyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/lawyerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lawyer" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rolesListRight"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/middleGuide"
        app:layout_constraintTop_toBottomOf="@id/rolesGuide">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/civilians"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/default_number"/>
            <TextView
                android:id="@+id/civilianText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/civilians" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/suspects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/default_number"/>
            <TextView
                android:id="@+id/suspectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suspects" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/official"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/officialText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/official" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/matchmaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/matchmakerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matchmaker" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/gossip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/gossipText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gossip" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:id="@+id/submit"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>